# dsait4205-ev-mask-reproduction

./: .gitignore  pyproject.toml
src/: dvs_config.py  dvs_dataset.py  dvs_testing.py  dvs_training.py  main.py  my_data_generation.py  my_label_generation.py
src/mrcnn/: model.py  utils.py
