[project]
name = "dsait4205-ev-mask-reproduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "imgaug>=0.4.0",
    "ipython>=8.12.3",
    "keras==2.4.3",
    "matplotlib==3.5.2",
    "numpy==1.21.5",
    "protobuf<=3.20",
    "pycocotools>=2.0.7",
    "scikit-image==0.16.2",
    "setuptools>=75.3.2",
    "tensorflow>=2.2.0",
    "tonic>=1.6.0",
    "torch==2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.10",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
